# rt-cc-f-d

./: .env.example  .gitignore  .secrets  Makefile  README.md  pyproject.toml
.github/workflows/: security-scan.yaml
dataflow-pipeline/: .env.example  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
fraudapi/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
fraudapi/api/: base.py
fraudapi/api/endpoint/: prediction.py
fraudapi/app/: main.py
fraudapi/app/api/: base.py
fraudapi/app/api/endpoint/: prediction.py
fraudapi/app/core/: config.py  logging.py  storage.py
fraudapi/app/dto/response/: prediction.py
fraudapi/app/service/: prediction_service.py
fraudapi/core/: config.py  logging.py  storage.py
fraudapi/dto/request/: transaction.py
fraudapi/dto/response/: prediction.py
fraudapi/service/: prediction_service.py
k8s/configs/: dataflow-pipeline-config.yaml  fraudapi-config.yaml
k8s/deployments/: dataflow-pipeline-deployment-local.yaml  fraudapi-deployment-local.yaml
k8s/services/: fraudapi-service.yaml
notebook/: etl_experiment.ipynb  file_batcher.ipynb
